manifests/deployment-1.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "aksnew2505-2dbd"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "aksnew2505-2dbd"
    spec:
      containers:
        - name: "aksnew2505-2dbd"
          image: "aksrepo2505.azurecr.io/aksnew2505"
          ports:
          - containerPort: 80
