manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "aksnew2505-9c39"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aksnew2505-9c39
  template:
    metadata:
      labels:
        app: aksnew2505-9c39
    spec:
      containers:
        - name: "aksnew2505-9c39"
          image: "aksrepo2505.azurecr.io/myshuttle2"
          ports:
          - containerPort: 80
