manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "myshuttle-web"
    labels:
        app: "myshuttle-web"
spec:
    type: LoadBalancer
    ports:
    - port: 81
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "myshuttle-web"
