manifests/ingress.yml
  
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: "ingress-nginx"
    labels:
        app: "myshuttle"
    annotations:
        kubernetes.io/ingress.class: nginx
        app.kubernetes.io/name: ingress-nginx
spec:
  rules:
  - http:
      paths:
      - path: /myshuttle
        backend:
          serviceName: "myshuttle-web"
          servicePort: 80
